# protein-binding-setup

./: .gitignore  pyproject.toml
.prime/skills/pi-replay/: SKILL.md
configs/eval/: protein-binder-baseline.toml  protein-binder-monomer-real-pinder-claude-opus-x256-v053.toml  protein-binder-monomer-real-pinder-large-v051.toml  protein-binder-monomer-real-pinder-small-v051.toml  protein-binder-monomer-real-pinder-x128-v052.toml  protein-binder-monomer-real-smoke.toml  protein-binder-monomer-real-v015-toolcheck-fleet.json  protein-binder-pipeline-baseline.toml  protein-binder-pipeline-models.toml  protein-binder-top5-v012-small.toml  protein-binder-v013-hosted-batch-ids.json  protein-binder-v013-hosted-batch.toml
configs/rl/: protein-binder-monomer-real-bqxlike-v018-sweep-remaining.txt  protein-binder-monomer-real-qwen30b-instruct-proven-bqxlike-v018.toml  protein-binder-monomer-real-qwen30b-instruct-proven-hostlock-v016.toml  protein-binder-monomer-real-qwen30b-instruct-proven-hostlock-v018.toml  protein-binder-monomer-real-qwen30b-instruct-proven-nosync-v015.toml  protein-binder-monomer-real-qwen30b-instruct-proven-r3-v015.toml  protein-binder-monomer-real-qwen30b-instruct-proven-ultrashort-v015.toml  protein-binder-monomer-real-qwen30b-instruct-ronig-r3-v015.toml  protein-binder-monomer-real-qwen30b-instruct-ronig-smoke-v015.toml  protein-binder-monomer-real-qwen30b-proven-r2.toml  protein-binder-monomer-real-qwen30b-thinking-all-r1-v014.toml  protein-binder-monomer-real-qwen30b-thinking-proven-bqxlike-v018.toml  protein-binder-monomer-real-qwen30b-thinking-ronig-smoke-v015.toml  protein-binder-monomer-real-qwen30b-thinking-ronig-train-b32-os10-s4-lr3e06-t10-v041.toml  protein-binder-monomer-real-qwen30b-thinking-ronig-train-b32-os10-s4-lr5e06-t10-v041.toml  protein-binder-monomer-real-qwen30b-thinking-ronig-train-b32-os10-s8-lr3e06-t10-v041.toml  protein-binder-monomer-real-qwen30b-thinking-ronig-train-b32-os125-s4-lr3e06-t10-v041.toml  protein-binder-monomer-real-qwen30b-thinking-ronig-train-b32-os125-s4-lr5e06-t10-v041.toml  protein-binder-monomer-real-qwen30b-thinking-ronig-train-b32-os125-s8-lr3e06-t10-v041.toml  protein-binder-monomer-real-qwen30b-thinking-ronig-train-b48-os10-s4-lr3e06-t10-v041.toml  (+53 more)
environments/protein_binder/: README.md  protein_binder.py  pyproject.toml  redesign_scope.py  synthetic_dataset.py
environments/protein_binder/outputs/evals/protein-binder--openai--gpt-4.1-mini/009faa2b/: metadata.json  results.jsonl
environments/protein_binder/outputs/evals/protein-binder--openai--gpt-4.1-mini/6b2767a1/: metadata.json  results.jsonl
environments/protein_binder/outputs/evals/protein-binder--openai--gpt-4.1-mini/aa70222a/: metadata.json  results.jsonl
environments/protein_binder_monomer_real/: Dockerfile  README.md  pyproject.toml
environments/protein_binder_monomer_real/experimental_h200_sandbox/: Dockerfile  README.md  sandbox_entrypoint.sh  smoke_test.sh
environments/protein_binder_monomer_real/protein_binder_monomer_real/: __init__.py  protein_binder_monomer_real.py  tasks.py
environments/protein_binder_monomer_real/protein_binder_monomer_real/data/: pinder_curated_tasks.json  ronig_curated_tasks.json
environments/protein_binder_monomer_real/protein_binder_monomer_real/support/: api_server.py  run_monomer_pipeline.py
environments/protein_binder_pipeline/: Dockerfile  README.md  pipeline_tasks.py  protein_binder_pipeline.py  pyproject.toml  sandbox_runner.py
environments/protein_binder_pipeline/.prime/: .env-metadata.json
scripts/: run_hosted_rl_queue.py  run_monomer_real_hosted_fleet.py  submit_hosted_rl_with_top_level.py  watch_eval_and_launch_next.sh
(+8 files in other folders)
