[project]
name = "protein-binder"
description = "Synthetic peptide binder design environment with tool-assisted sequence analysis"
tags = ["protein-design", "biology", "tool-use", "synthetic", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["protein_binder.py", "synthetic_dataset.py", "pyproject.toml", "README.md"]

[tool.verifiers.eval]
num_examples = 12
rollouts_per_example = 1
