[project]
name = "protein-binder"
description = "Budgeted peptide-binder redesign environment with stateful search and multi-fidelity screening"
tags = ["protein-design", "biology", "tool-use", "stateful", "redesign", "train", "eval"]
version = "0.1.3"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["protein_binder.py", "redesign_scope.py", "synthetic_dataset.py", "pyproject.toml", "README.md"]

[tool.verifiers.eval]
num_examples = 12
rollouts_per_example = 1
